Fixing home page overflow

--- a/platforms/browser/www/css/my-app.css
+++ b/platforms/browser/www/css/my-app.css
@@ -36,7 +36,7 @@ h3 {
     -webkit-backdrop-filter: blur(10px);
 }
 [data-page='home'] {
-    overflow: hidden;
+    overflow: hidden !important;
 }
 .page-content.love-works {
     width: 110%;
